k8s/my-app/hasil.yaml
---
# Source: my-app/templates/01-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynew-namespace2
---
# Source: my-app/templates/08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: mynew-namespace2

spec:
  selector:
    app: example-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
# Source: my-app/templates/09-pod_debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-debug-pod
  namespace: mynew-namespace2

spec:
  containers:
  - name: debug-container
    image: amazonlinux:2
    command: [ "sleep", "3600" ]
    volumeMounts:
    - mountPath: /mnt/efs
      name: efs-volume
  volumes:
  - name: efs-volume
    persistentVolumeClaim:
      claimName: example-pvc
---
# Source: my-app/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-app-test-connection"
  namespace: mynew-namespace2
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['http://80']
  # restartPolicy: Never
---
# Source: my-app/templates/06-deployConfigSecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: mynew-namespace2

spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: my-app
      containers:
      - name: example-container
        image: busybox:latest
        command: [ "sleep", "3600" ]
        volumeMounts:
        - mountPath: "/data"
          name: efs-volume
        - mountPath: "/config"
          name: config-volume
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: example-pvc
      - name: config-volume
        configMap:
          name: example-configmap
          items:
          - key: config-file.properties
            path: config-file.properties
---
# Source: my-app/templates/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: mynew-namespace2

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-secret
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
